# rustyengine

./: CHANGELOG.md  Cargo.toml  README.md  conf.toml  notes.md
src/: engine.rs  enums.rs  errs.rs  globals.rs  linal.rs  linalg.rs  main.rs  primitives.rs  tests.rs  utils.rs  vecspace.rs
src/engine/: entity.rs  game.rs  ray.rs
src/lib/: lib.rs  prelude.rs
src/lib/conf/: mod.rs
src/lib/conf/test/: conf1.toml  conf2.toml  mod.rs
src/lib/engn/: camera.rs  canvas.rs  charcoal.rs  console.rs  entity.rs  event.rs  event_sys.rs  event_traits.rs  game.rs  geometrical.rs  hype.rs  material.rs  material_traits.rs  mod.rs  ray.rs
src/lib/engn/test/: camera_test.rs  entity_test.rs  event_test.rs  game_test.rs  material_test.rs  mod.rs
src/lib/errs/: engn_errs.rs  game_errs.rs  grid_errs.rs  math_errs.rs  matr_errs.rs  mod.rs  none_opts.rs
src/lib/grid/: grid.rs  mod.rs  raw_grid.rs  test.rs
src/lib/grid/test/: grid_test.rs  mod.rs  raw_grid_test.rs
src/lib/math/: coord_sys.rs  euclide.rs  matr.rs  matrix.rs  mod.rs  prec.rs  precision.rs  space.rs  test.rs
src/lib/math/test/: coord_sys_test.rs  matr_test.rs  matrix_test.rs  mod.rs  prec_test.rs  precision_test.rs  space_test.rs  vector_test.rs
src/lib/util/: mod.rs
src/linal/: coord_sys.rs  enums.rs  matr.rs  matrixify.rs  rotations.rs  tests.rs
src/linalg/: coord_sys.rs  enums.rs  matrix.rs  matrixified.rs  matrixify.rs  rotations.rs  tests.rs
src/vecspace/: biform.rs  enums.rs  matrixified.rs  tests.rs  utils.rs
