[package]
name = "rustyengine"
authors = ["the-makcym"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustyengineer"
path = "src/lib/lib.rs"

[[bin]]
name = "rustyengine"
path = "src/bin/bin.rs"

[dependencies]
once_cell = "1.17.1"
uuid = { version = "1.3.1", features = ["v4"] }