[package]
name = "rustyengine"
authors = ["the-makcym"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustyengine"
path = "src/lib/lib.rs"

[[bin]]
name = "labyrinth"
path = "src/bin/bin.rs"

[dependencies]
once_cell = "1.17.1"
uuid = { version = "1.3.1", features = ["v4"] }
thiserror = "1.0.40"
strum = "0.24.1"
strum_macros = "0.24.3"
toml = { version = "0.7.3", features = ["parse"] }
crossterm = "0.26.1"
anyhow = "1.0.71"
either = "1.8.1"
